--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-        "lint:fix": "eslint --fix 'src/**/*.{jsx,ts,tsx}'",
-        "format": "prettier --write src//**/*.{ts,tsx,css} --config ./.prettierrc",
+        "lint": "eslint components/**/*.{ts,tsx}",
+        "lint:fix": "eslint --fix components/**/*.{ts,tsx}",
+        "format": "prettier --write components/**/*.{ts,tsx,css} --config ./.prettierrc",
         "prepare": "husky install"
     },
     "dependencies": {
@@ -57,7 +57,7 @@
         "react-dom": "^18.2.0"
     },
     "lint-staged": {
-        "src/**/*.{js,jsx,ts,tsx}": [
+        "components/**/*.{js,jsx,ts,tsx}": [
             "npx eslint",
             "npm run format"
         ]
