--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,13 @@
         "browser": true,
         "es2021": true
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended", "prettier"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier",
+        "plugin:storybook/recommended"
+    ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
@@ -12,7 +18,12 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": ["react", "@typescript-eslint", "prettier", "simple-import-sort"],
+    "plugins": [
+        "react",
+        "@typescript-eslint",
+        "prettier",
+        "simple-import-sort"
+    ],
     "rules": {
         "camelcase": "error",
         "no-duplicate-imports": "error",
