--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prettier": "^2.8.1",
     "react-hooks": "^1.0.1",
     "rollup-plugin-typescript2": "^0.34.1",
+    "sass": "^1.57.1",
     "storybook": "^7.0.0-beta.15",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
