--- a/package.json
+++ b/package.json
@@ -1,77 +1,77 @@
 {
-  "name": "@rinzai/zen",
-  "version": "0.0.2",
-  "type": "module",
-  "files": [
-    "dist"
-  ],
-  "types": "./dist/index.d.ts",
-  "main": "./dist/zen-ui.umd.js",
-  "module": "./dist/zen-ui.es.js",
-  "exports": {
-    ".": {
-      "import": "./dist/zen-ui.es.js",
-      "require": "./dist/zen-ui.umd.js"
+    "name": "@rinzai/zen",
+    "version": "0.0.2",
+    "type": "module",
+    "files": [
+        "dist"
+    ],
+    "types": "./dist/index.d.ts",
+    "main": "./dist/zen.umd.js",
+    "module": "./dist/zen.es.js",
+    "exports": {
+        ".": {
+            "import": "./dist/zen.es.js",
+            "require": "./dist/zen.umd.js"
+        }
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "lint": "eslint components/**/*.{ts,tsx}",
+        "lint:fix": "eslint --fix components/**/*.{ts,tsx}",
+        "format": "prettier --write components/**/*.{ts,tsx,css} --config ./.prettierrc",
+        "prepare": "husky install",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@storybook/addon-essentials": "^7.0.0-beta.15",
+        "@storybook/addon-interactions": "^7.0.0-beta.15",
+        "@storybook/addon-links": "^7.0.0-beta.15",
+        "@storybook/blocks": "^7.0.0-beta.15",
+        "@storybook/react": "^7.0.0-beta.15",
+        "@storybook/react-vite": "^7.0.0-beta.15",
+        "@storybook/testing-library": "^0.0.13",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
+        "@typescript-eslint/eslint-plugin": "^5.47.1",
+        "@typescript-eslint/parser": "^5.47.1",
+        "@vitejs/plugin-react-swc": "^3.0.0",
+        "eslint": "^8.30.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.11",
+        "eslint-plugin-simple-import-sort": "^8.0.0",
+        "eslint-plugin-storybook": "^0.6.8",
+        "husky": "^8.0.2",
+        "prettier": "^2.8.1",
+        "react-hooks": "^1.0.1",
+        "rollup-plugin-typescript2": "^0.34.1",
+        "sass": "^1.57.1",
+        "storybook": "^7.0.0-beta.15",
+        "typescript": "^4.9.3",
+        "vite": "^4.0.0",
+        "vite-plugin-dts": "^1.7.1",
+        "vite-plugin-linter": "^2.0.2"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "peerDependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "lint-staged": {
+        "components/**/*.{js,jsx,ts,tsx}": [
+            "npx eslint",
+            "npm run format"
+        ]
     }
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint components/**/*.{ts,tsx}",
-    "lint:fix": "eslint --fix components/**/*.{ts,tsx}",
-    "format": "prettier --write components/**/*.{ts,tsx,css} --config ./.prettierrc",
-    "prepare": "husky install",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.0-beta.15",
-    "@storybook/addon-interactions": "^7.0.0-beta.15",
-    "@storybook/addon-links": "^7.0.0-beta.15",
-    "@storybook/blocks": "^7.0.0-beta.15",
-    "@storybook/react": "^7.0.0-beta.15",
-    "@storybook/react-vite": "^7.0.0-beta.15",
-    "@storybook/testing-library": "^0.0.13",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "eslint-plugin-storybook": "^0.6.8",
-    "husky": "^8.0.2",
-    "prettier": "^2.8.1",
-    "react-hooks": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "sass": "^1.57.1",
-    "storybook": "^7.0.0-beta.15",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vite-plugin-dts": "^1.7.1",
-    "vite-plugin-linter": "^2.0.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "lint-staged": {
-    "components/**/*.{js,jsx,ts,tsx}": [
-      "npx eslint",
-      "npm run format"
-    ]
-  }
 }
