--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@emotion/css": "^11.10.5",
         "@storybook/addon-essentials": "^7.0.0-beta.15",
         "@storybook/addon-interactions": "^7.0.0-beta.15",
         "@storybook/addon-links": "^7.0.0-beta.15",
