--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@storybook/react": "^7.0.0-beta.20",
         "@storybook/react-vite": "^7.0.0-beta.20",
         "@storybook/testing-library": "^0.0.13",
+        "@tanstack/react-table": "^8.7.4",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
         "@typescript-eslint/eslint-plugin": "^5.47.1",
