--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     },
     "devDependencies": {
         "@emotion/css": "^11.10.5",
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-regular-svg-icons": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@storybook/addon-essentials": "^7.0.0-beta.20",
         "@storybook/addon-interactions": "^7.0.0-beta.20",
         "@storybook/addon-links": "^7.0.0-beta.20",
