--- a/package.json
+++ b/package.json
@@ -10,64 +10,50 @@
     "main": "./dist/zen.umd.js",
     "module": "./dist/zen.es.js",
     "scripts": {
-        "build": "concurrently \"npm run build:css\" \"tsc  && vite build\"",
-        "build:css": "tailwindcss -m -i ./src/tailwind-entry.css -o ./dist/index.css",
-        "lint": "eslint components/**/*.{ts,tsx}",
-        "lint:fix": "eslint --fix components/**/*.{ts,tsx}",
-        "format": "prettier --write components/**/*.{ts,tsx,css} --config ./.prettierrc",
+        "build": "vite build",
+        "lint": "eslint packages/**/*.{ts,tsx}",
+        "lint:fix": "eslint --fix packages/**/*.{ts,tsx}",
+        "format": "prettier --write packages/**/*.{ts,tsx,css} --config ./.prettierrc",
         "prepare": "husky install",
-        "dev": "concurrently \"npm run watch:*\"",
-        "watch:storybook": "storybook dev -p 6006",
-        "watch:tailwind": "tailwindcss -w -i ./components/tailwind-entry.css -o ./components/index.css",
+        "dev": "storybook dev -p 6006",
         "build-storybook": "concurrently \"npm run build-storybook:css\" \"storybook build\"",
-        "build-storybook:css": "tailwindcss -m -i ./components/tailwind-entry.css -o ./components/index.css"
+        "build-storybook:css": "tailwindcss -m -i packages/tailwind-entry.css -o packages/index.css"
     },
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@emotion/css": "^11.10.5",
-        "@fortawesome/fontawesome-svg-core": "^6.2.1",
-        "@fortawesome/free-regular-svg-icons": "^6.2.1",
-        "@fortawesome/free-solid-svg-icons": "^6.2.1",
-        "@fortawesome/react-fontawesome": "^0.2.0",
-        "@storybook/addon-essentials": "^7.0.0-beta.20",
-        "@storybook/addon-interactions": "^7.0.0-beta.20",
-        "@storybook/addon-links": "^7.0.0-beta.20",
-        "@storybook/blocks": "^7.0.0-beta.20",
-        "@storybook/react": "^7.0.0-beta.20",
-        "@storybook/react-vite": "^7.0.0-beta.20",
-        "@storybook/testing-library": "^0.0.13",
-        "@tanstack/react-table": "^8.7.4",
-        "@types/react": "^18.0.26",
-        "@types/react-dom": "^18.0.9",
-        "@typescript-eslint/eslint-plugin": "^5.47.1",
-        "@typescript-eslint/parser": "^5.47.1",
-        "@vitejs/plugin-react-swc": "^3.0.0",
-        "autoprefixer": "^10.4.13",
-        "class-variance-authority": "^0.4.0",
-        "concurrently": "^7.6.0",
-        "eslint": "^8.30.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.31.11",
-        "eslint-plugin-simple-import-sort": "^8.0.0",
-        "eslint-plugin-storybook": "^0.6.8",
-        "husky": "^8.0.2",
-        "postcss": "^8.4.21",
-        "prettier": "^2.8.1",
-        "react-hooks": "^1.0.1",
-        "rollup-plugin-typescript2": "^0.34.1",
-        "sass": "^1.57.1",
-        "storybook": "^7.0.0-beta.20",
-        "tailwindcss": "^3.2.4",
-        "typescript": "^4.9.3",
-        "vite": "^4.0.0",
-        "vite-plugin-css-injected-by-js": "^2.4.0",
-        "vite-plugin-dts": "^1.7.1",
-        "vite-plugin-linter": "^2.0.2",
-        "vite-tsconfig-paths": "^4.0.3"
+        "@storybook/addon-essentials": "^7.6.6",
+        "@storybook/addon-interactions": "^7.6.6",
+        "@storybook/addon-links": "^7.6.6",
+        "@storybook/addon-styling": "^1.3.7",
+        "@storybook/blocks": "^7.6.6",
+        "@storybook/react": "^7.6.6",
+        "@storybook/react-vite": "^7.6.6",
+        "@storybook/testing-library": "^0.2.2",
+        "@types/react": "^18.2.45",
+        "@types/react-dom": "^18.2.18",
+        "@typescript-eslint/eslint-plugin": "^6.15.0",
+        "@typescript-eslint/parser": "^6.15.0",
+        "@vitejs/plugin-react-swc": "^3.5.0",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.0",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "eslint-plugin-storybook": "^0.6.15",
+        "husky": "^8.0.3",
+        "postcss": "^8.4.32",
+        "prettier": "^3.1.1",
+        "storybook": "^7.6.6",
+        "tailwindcss": "^3.4.0",
+        "typescript": "^5.3.3",
+        "vite": "^5.0.10",
+        "vite-plugin-css-injected-by-js": "^3.3.1",
+        "vite-plugin-dts": "^3.6.4",
+        "vite-tsconfig-paths": "^4.2.2"
     },
     "husky": {
         "hooks": {
