--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-	"semi": false,
-	"tabWidth": 4,
-	"printWidth": 120,
-	"singleQuote": true,
-	"trailingComma": "all",
-	"bracketSpacing": true
+    "tabWidth": 4,
+    "printWidth": 120,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "bracketSpacing": true,
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
