--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-    "name": "@rinzai/zen",
+    "name": "zen",
+    "namespace": "@rinzai",
     "version": "0.0.10",
     "type": "module",
     "types": "./dist/index.d.ts",
-    "main": "./dist/zen.umd.js",
-    "module": "./dist/zen.es.js",
+    "module": "./dist/zen.js",
     "files": [
         "dist"
     ],
     "exports": {
         ".": {
-            "import": "./dist/zen.es.js",
-            "require": "./dist/zen.umd.js",
-            "types": "./dist/index.d.ts"
+            "import": "./dist/zen.js",
+            "require": "./dist/zen.js"
         },
+        "./dist/index.d.ts": "./dist/index.d.ts",
         "./dist/style.css": "./dist/style.css"
     },
     "scripts": {
@@ -23,10 +23,10 @@
         "format": "prettier --write packages/**/*.{ts,tsx,css} --config ./.prettierrc",
         "prepare": "husky install",
         "dev": "storybook dev -p 6006",
-        "build-storybook": "concurrently \"npm run build-storybook:css\" \"storybook build\"",
-        "build-storybook:css": "tailwindcss -m -i packages/tailwind-entry.css -o packages/index.css"
+        "build-storybook": "storybook build"
     },
     "dependencies": {
+        "@floating-ui/react": "^0.26.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
@@ -38,7 +38,6 @@
         "@storybook/blocks": "^7.6.6",
         "@storybook/react": "^7.6.6",
         "@storybook/react-vite": "^7.6.6",
-        "@storybook/testing-library": "^0.2.2",
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.18",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
@@ -54,6 +53,7 @@
         "husky": "^8.0.3",
         "postcss": "^8.4.32",
         "prettier": "^3.1.1",
+        "prettier-plugin-tailwindcss": "^0.5.9",
         "storybook": "^7.6.6",
         "tailwindcss": "^3.4.0",
         "typescript": "^5.3.3",
