--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "@storybook/addon-essentials": "^7.6.6",
         "@storybook/addon-interactions": "^7.6.6",
         "@storybook/addon-links": "^7.6.6",
-        "@storybook/addon-styling": "^1.3.7",
+        "@storybook/addon-themes": "^7.6.6",
         "@storybook/blocks": "^7.6.6",
         "@storybook/react": "^7.6.6",
         "@storybook/react-vite": "^7.6.6",
@@ -58,6 +58,7 @@
         "tailwindcss": "^3.4.0",
         "typescript": "^5.3.3",
         "vite": "^5.0.10",
+        "vite-plugin-css-injected-by-js": "^3.3.1",
         "vite-plugin-dts": "^3.6.4",
         "vite-tsconfig-paths": "^4.2.2"
     },
