--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "@floating-ui/react": "^0.26.4",
+        "@tanstack/react-virtual": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
