--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "esModuleInterop": true,
         "declarationMap": true,
         "baseUrl": ".",
-        "experimentalDecorators": true,
+        "experimentalDecorators": false,
         "paths": {
             "@zen/*": ["packages/*"]
         }
