--- a/package.json
+++ b/package.json
@@ -1,83 +1,86 @@
 {
-  "name": "@rinzai/zen",
-  "version": "0.0.16",
-  "type": "module",
-  "types": "./dist/index.d.ts",
-  "module": "./dist/zen.js",
-  "files": [
-    "dist"
-  ],
-  "exports": {
-    ".": {
-      "import": "./dist/zen.js",
-      "require": "./dist/zen.js",
-      "types": "./dist/index.d.ts"
+    "name": "@rinzai/zen",
+    "version": "0.0.16",
+    "type": "module",
+    "types": "./dist/index.d.ts",
+    "module": "./dist/zen.js",
+    "files": [
+        "dist"
+    ],
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/zen.js",
+            "require": "./dist/zen.js"
+        },
+        "./dist/style.css": {
+            "import": "./dist/style.css",
+            "require": "./dist/style.css"
+        }
     },
-    "./dist/style.css": {
-      "import": "./dist/style.css",
-      "require": "./dist/style.css"
+    "scripts": {
+        "build": "vite build",
+        "lint": "eslint packages/**/*.{ts,tsx}",
+        "lint:fix": "eslint --fix packages/**/*.{ts,tsx}",
+        "format": "prettier --write packages/**/*.{ts,tsx,css} --config ./.prettierrc",
+        "prepare": "husky",
+        "dev": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
+    },
+    "dependencies": {
+        "@floating-ui/react-dom": "^2.1.2",
+        "@tanstack/react-virtual": "^3.11.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.16.0",
+        "@storybook/addon-essentials": "^8.4.7",
+        "@storybook/addon-interactions": "^8.4.7",
+        "@storybook/addon-links": "^8.4.7",
+        "@storybook/addon-themes": "^8.4.7",
+        "@storybook/blocks": "^8.1.10",
+        "@storybook/react": "^8.1.10",
+        "@storybook/react-vite": "^8.4.7",
+        "@types/react": "^19.0.1",
+        "@types/react-dom": "^19.0.2",
+        "@typescript-eslint/eslint-plugin": "^8.18.0",
+        "@typescript-eslint/parser": "^8.18.0",
+        "@vitejs/plugin-react": "^4.3.4",
+        "autoprefixer": "^10.4.20",
+        "babel-plugin-react-compiler": "^19.0.0-beta-37ed2a7-20241206",
+        "eslint": "^9.16.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-react": "^7.37.2",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "eslint-plugin-storybook": "^0.11.1",
+        "globals": "^15.13.0",
+        "husky": "^9.1.7",
+        "postcss": "^8.4.49",
+        "prettier": "^3.4.2",
+        "prettier-plugin-tailwindcss": "^0.6.9",
+        "storybook": "^8.4.7",
+        "tailwindcss": "^3.4.16",
+        "typescript": "^5.7.2",
+        "typescript-eslint": "^8.18.0",
+        "vite": "^6",
+        "vite-plugin-dts": "^4",
+        "vite-tsconfig-paths": "^5"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "peerDependencies": {
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
+    },
+    "lint-staged": {
+        "components/**/*.{js,jsx,ts,tsx}": [
+            "npx eslint",
+            "npm run format"
+        ]
     }
-  },
-  "scripts": {
-    "build": "vite build",
-    "lint": "eslint packages/**/*.{ts,tsx}",
-    "lint:fix": "eslint --fix packages/**/*.{ts,tsx}",
-    "format": "prettier --write packages/**/*.{ts,tsx,css} --config ./.prettierrc",
-    "prepare": "husky install",
-    "dev": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "dependencies": {
-    "@floating-ui/react-dom": "^2.1.0",
-    "@tanstack/react-virtual": "^3.5.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@storybook/addon-essentials": "^8.1.10",
-    "@storybook/addon-interactions": "^8.1.10",
-    "@storybook/addon-links": "^8.1.10",
-    "@storybook/addon-themes": "^8.1.10",
-    "@storybook/blocks": "^8.1.10",
-    "@storybook/react": "^8.1.10",
-    "@storybook/react-vite": "^8.1.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.2",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
-    "eslint-plugin-storybook": "^0.8.0",
-    "husky": "^9.0.11",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "storybook": "^8.1.10",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5",
-    "vite": "^5.3.1",
-    "vite-plugin-css-injected-by-js": "^3.5.1",
-    "vite-plugin-dts": "^3.9.1",
-    "vite-tsconfig-paths": "^4.3.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "lint-staged": {
-    "components/**/*.{js,jsx,ts,tsx}": [
-      "npx eslint",
-      "npm run format"
-    ]
-  }
 }
