--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "dependencies": {
         "@floating-ui/react-dom": "^2.1.2",
         "@tanstack/react-virtual": "^3.11.1",
+        "babel-plugin-react-compiler": "^19.0.0-beta-37ed2a7-20241206",
         "react": "^19.0.0",
+        "react-compiler-runtime": "^19.0.0-beta-37ed2a7-20241206",
         "react-dom": "^19.0.0"
     },
     "devDependencies": {
@@ -49,7 +51,6 @@
         "@typescript-eslint/parser": "^8.18.0",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
-        "babel-plugin-react-compiler": "^19.0.0-beta-37ed2a7-20241206",
         "eslint": "^9.16.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
