--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
     "version": "0.1.4",
     "type": "module",
     "types": "./dist/index.d.ts",
-    "module": "./dist/index.js",
+    "module": "./dist/zen.js",
     "files": [
         "dist"
     ],
     "exports": {
         ".": {
             "types": "./dist/index.d.ts",
-            "import": "./dist/index.js",
-            "require": "./dist/index.js"
+            "import": "./dist/zen.js"
         },
         "./css": {
-            "import": "./dist/index.css",
-            "require": "./dist/index.css"
+            "import": "./dist/zen.css"
         }
     },
     "scripts": {
@@ -23,16 +21,13 @@
         "lint": "eslint packages/**/*.{ts,tsx}",
         "lint:fix": "eslint --fix packages/**/*.{ts,tsx}",
         "format": "prettier --write packages/**/*.{ts,tsx,css} --config ./.prettierrc",
-        "prepare": "husky",
         "dev": "storybook dev -p 6006",
         "build-storybook": "storybook build",
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
         "@floating-ui/react-dom": "^2.1.2",
-        "@tanstack/react-virtual": "^3.11.1",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "@tanstack/react-virtual": "^3.11.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.16.0",
@@ -66,21 +61,12 @@
         "typescript-eslint": "^8.18.0",
         "vite": "^6",
         "vite-plugin-dts": "^4",
-        "vite-tsconfig-paths": "^5"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
+        "vite-tsconfig-paths": "^5",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
     },
     "peerDependencies": {
         "react": "^19.0.0",
         "react-dom": "^19.0.0"
-    },
-    "lint-staged": {
-        "components/**/*.{js,jsx,ts,tsx}": [
-            "npx eslint",
-            "npm run format"
-        ]
     }
 }
