--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "exports": {
         ".": {
             "types": "./dist/index.d.ts",
-            "import": "./dist/zen.js"
+            "import": "./dist/zen.js",
+            "require": "./dist/zen.js"
         },
         "./css": {
-            "import": "./dist/zen.css"
+            "import": "./dist/zen.css",
+            "require": "./dist/zen.css"
         }
     },
     "scripts": {
@@ -27,10 +29,12 @@
     },
     "dependencies": {
         "@floating-ui/react-dom": "^2.1.2",
-        "@tanstack/react-virtual": "^3.11.1"
+        "@tanstack/react-virtual": "^3.11.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
     },
     "devDependencies": {
-        "@eslint/js": "^9.16.0",
+        "@eslint/js": "^9.17.0",
         "@storybook/addon-essentials": "^8.4.7",
         "@storybook/addon-interactions": "^8.4.7",
         "@storybook/addon-links": "^8.4.7",
@@ -42,9 +46,9 @@
         "@types/react-dom": "^19.0.2",
         "@typescript-eslint/eslint-plugin": "^8.18.0",
         "@typescript-eslint/parser": "^8.18.0",
-        "@vitejs/plugin-react": "^4.3.4",
+        "@vitejs/plugin-react-swc": "3.7.2",
         "autoprefixer": "^10.4.20",
-        "eslint": "^9.16.0",
+        "eslint": "^9.17.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-react": "^7.37.2",
@@ -61,9 +65,7 @@
         "typescript-eslint": "^8.18.0",
         "vite": "^6",
         "vite-plugin-dts": "^4",
-        "vite-tsconfig-paths": "^5",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "vite-tsconfig-paths": "^5"
     },
     "peerDependencies": {
         "react": "^19.0.0",
