--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@storybook/blocks": "^8.1.10",
         "@storybook/react": "^8.1.10",
         "@storybook/react-vite": "^8.4.7",
+        "@tailwindcss/vite": "^4.0.9",
         "@types/react": "^19.0.1",
         "@types/react-dom": "^19.0.2",
         "@typescript-eslint/eslint-plugin": "^8.18.0",
@@ -58,9 +59,9 @@
         "husky": "^9.1.7",
         "postcss": "^8.4.49",
         "prettier": "^3.4.2",
-        "prettier-plugin-tailwindcss": "^0.6.9",
+        "prettier-plugin-tailwindcss": "^0.6.11",
         "storybook": "^8.4.7",
-        "tailwindcss": "^3.4.16",
+        "tailwindcss": "^4.0.9",
         "typescript": "^5.7.2",
         "typescript-eslint": "^8.18.0",
         "vite": "^6",
