--- a/package.json
+++ b/package.json
@@ -28,48 +28,45 @@
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "@floating-ui/react-dom": "^2.1.2",
-        "@tanstack/react-virtual": "^3.13.2",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "@floating-ui/react-dom": "^2.1.4",
+        "@tanstack/react-virtual": "^3.13.12",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
-        "@storybook/addon-essentials": "^8.6.3",
-        "@storybook/addon-interactions": "^8.6.3",
-        "@storybook/addon-links": "^8.6.3",
-        "@storybook/addon-themes": "^8.6.3",
-        "@storybook/blocks": "^8.1.10",
-        "@storybook/react": "^8.1.10",
-        "@storybook/react-vite": "^8.6.3",
-        "@tailwindcss/vite": "^4.0.9",
-        "@types/react": "^19.0.10",
-        "@types/react-dom": "^19.0.4",
+        "@storybook/addon-links": "^9.0.14",
+        "@storybook/addon-themes": "^9.0.14",
+        "@storybook/react-vite": "^9.0.14",
+        "@tailwindcss/vite": "^4.1.11",
+        "@types/react": "^19.1.8",
+        "@types/react-dom": "^19.1.6",
         "@typescript-eslint/eslint-plugin": "^8.18.0",
         "@typescript-eslint/parser": "^8.18.0",
-        "@vitejs/plugin-react-swc": "3.7.2",
-        "autoprefixer": "^10.4.20",
-        "eslint": "^9.21.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.2.3",
-        "eslint-plugin-react": "^7.37.4",
+        "@vitejs/plugin-react-swc": "3.10.2",
+        "autoprefixer": "^10.4.21",
+        "eslint": "^9.30.0",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-prettier": "^5.5.1",
+        "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-simple-import-sort": "^12.1.1",
-        "eslint-plugin-storybook": "^0.11.3",
-        "globals": "^15.15.0",
+        "eslint-plugin-storybook": "^9.0.14",
+        "globals": "^16.2.0",
         "husky": "^9.1.7",
-        "postcss": "^8.5.3",
-        "prettier": "^3.5.3",
-        "prettier-plugin-tailwindcss": "^0.6.11",
-        "storybook": "^8.6.3",
+        "postcss": "^8.5.6",
+        "prettier": "^3.6.2",
+        "prettier-plugin-tailwindcss": "^0.6.13",
+        "storybook": "^9.0.14",
         "tailwindcss": "^4.0.9",
-        "typescript": "^5.7.2",
-        "typescript-eslint": "^8.26.0",
-        "vite": "^6.2.0",
-        "vite-plugin-dts": "^4.5.3",
-        "vite-tsconfig-paths": "^5.1.4"
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.35.0",
+        "vite": "^7.0.0",
+        "vite-plugin-dts": "^4.5.4",
+        "vite-tsconfig-paths": "^5.1.4",
+        "@storybook/addon-docs": "^9.0.14"
     },
     "peerDependencies": {
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0"
     }
 }
